# SFHacks2025

./: .gitignore  README.md
OM1/: pyproject.toml
OM1/config/: turtlebot4.json5
OM1/facial_recognition/: face_detector.py  run.py  server.py
OM1/src/actions/move_turtle/connector/: zenoh.py
OM1/src/facial_recognition/: database.py  demo.py  face_recognizer.py  setup.py
backend/facial_recognition/: USAGE_INSTRUCTIONS.md  test_detection.py  test_recognizer.py
config/: turtlebot4.json5
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/components/: BellIcon.tsx  FamilyMembersClient.tsx  Header.tsx  RobotIcon.tsx
frontend/src/app/family/: page.tsx
frontend/src/lib/firebase/: FirebaseContext.tsx  examples.ts  firebase.ts  firestore.ts
frontend/src/lib/firebase/models/: FamilyMember.ts
frontend/src/lib/firebase/services/: familyService.ts
mobile/: package-lock.json  package.json  svgr-config.js
mobile/app/: _layout.tsx  index.tsx  profile.tsx
mobile/assets/components/: DanielIcons.tsx  GreenPlay.tsx  LeftArrow.tsx  MichelleIcons.tsx  Play.tsx  Remi.tsx  RightArrow.tsx
mobile/components/: PersonCard.tsx
src/actions/speak/connector/: simple_elevenlabs_tts.py  zenoh_speak.py
src/facial_recognition/: README.md  __init__.py  build_database.py  robot_integration.py  test_detection.py  utils.py
system_hw_test/: turtlebot4_camera_opencv.py  turtlebot4_keyboard_movement.py
